<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".levelcontrolexample.LevelControlExampleActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@drawable/vertical_divider_12dp"
        android:gravity="center"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Default Level Control with no parameters set -->
        <com.realwear.ux.view.LevelControl
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Level Control with all parameters set in XML -->
        <com.realwear.ux.view.LevelControl
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:level_command_negative="@string/level_control_xml_negative_command"
            app:level_command_positive="@string/level_control_xml_positive_command"
            app:level_command_zero="@string/level_control_xml_zero_command"
            app:max="3"
            app:min="-2"
            app:title="@string/level_control_xml_title"
            app:value="0" />

        <!-- Level Control with all parameters set in code (See LevelControlExampleActivity.java) -->
        <com.realwear.ux.view.LevelControl
            android:id="@+id/level_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Level Control with a custom style -->
        <com.realwear.ux.view.LevelControl
            style="@style/CustomLevelControlStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:level_command_negative="@string/level_control_styled_negative_command"
            app:level_command_positive="@string/level_control_styled_positive_command"
            app:level_command_zero="@string/level_control_styled_zero_command"
            app:title="@string/level_control_styled_title" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>